--- a/style.css
+++ b/style.css
@@ -222,11 +222,27 @@ p {
   width: 100%;
   height: 3px;
   background-color: var(--color-grey);
+  overflow: hidden;
+  position: relative
 }
 .skill__value {
   height: 3px;
+  display: block;
   background-color: var(--color-orange);
+  position: absolute;
+  transform-origin: left;
+  transform: scaleX(0);
 }
+
+.skill__animate {
+  animation: mySkillBar 2s ease-out forwards;
+}
+
+@keyframes mySkillBar {
+  0% { transform: scaleX(0); }
+  100% { transform: scaleX(1); }
+}
+
 .skill {
   margin-bottom: 10px;
 }
@@ -357,7 +373,7 @@ p {
   color: var(--color-black);
 }
 .contact__title {
-  margin: 32px 0;
+  margin: 35px 0;
 }
 .contact__email {
 }
